fiscalization-app-services/k8s/minikube/infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiscalization-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/v1/invoice"
        backend:
          service:
            name: invoice-management
            port:
              number: 8080
      - pathType: Prefix
        path: "/api/v1/catalog"
        backend:
          service:
            name: catalog-management
            port:
              number: 8080
